src/main/resources/de/mfo/surfer/css/style.css
* {
-fx-font-family: Verdanna;
-fx-font-size: 16px;
}

SceneNodeButton, SceneNodeToggleButton {
    -fx-cursor: null;
    -fx-effect: null;
    -fx-focus-traversable: false;
    -fx-opacity: 0.0;
    -fx-blend-mode: null;
    -fx-rotate: 0.0;
    -fx-scale-x: 1.0;
    -fx-scale-y: 1.0;
    -fx-scale-z: 1.0;
    -fx-translate-x: 0.0;
    -fx-translate-y: 0.0;
    -fx-translate-z: 0.0;
    visibility: true;
    -fx-padding: 0.0;
    -fx-background-color: null;
    -fx-background-insets: 0px;
    -fx-background-radius: null;
    -fx-background-image: null;
    -fx-background-position: 0% 0%;
    -fx-background-repeat: repeat repeat;
    -fx-background-image-slice: 100%;
    -fx-background-size: auto auto;
    -fx-border-color: null;
    -fx-border-insets: null;
    -fx-border-radius: null;
    -fx-border-style: null;
    -fx-border-width: 0;
    -fx-border-image-source: null;
    -fx-border-image-insets: 0 0 0 0;
    -fx-border-image-repeat: repeat;
    -fx-border-image-slice: 100%;
    -fx-border-image-width: 1 1 1 1;
    -fx-opaque-insets: null;
    -fx-shape: null;
    -fx-scale-shape: true;
    -fx-position-shape: true;
    -fx-snap-to-pixel: true;
    -fx-min-width: -1.0;
    -fx-pref-width: -1.0;
    -fx-max-width: -1.0;
    -fx-min-height: -1.0;
    -fx-pref-height: -1.0;
    -fx-max-height: -1.0;
    -fx-skin: null;
    -fx-alignment: CENTER_LEFT;
    -fx-text-alignment: LEFT;
    -fx-text-fill: black;
    -fx-text-overrun: ELLIPSIS;
    -fx-ellipsis-string: '...';
    -fx-wrap-text: false;
    -fx-graphic: null;
    -fx-underline: false;
    -fx-line-spacing: 0;
    -fx-content-display: LEFT;
    -fx-label-padding: 0;
    -fx-graphic-text-gap: 4.0;
/*
    -fx-font: ;
*/
}

FormulaInputForm .noDecoration {
    -fx-background-color: transparent;
    -fx-background-insets: 0px;
    -fx-background-radius: 0 0 0 0;
    -fx-background-image: null;
    -fx-background-position: 0% 0%;
    -fx-background-repeat: repeat repeat;
    -fx-background-image-slice: 100%;
    -fx-background-size: auto auto;
    -fx-border-color: null;
    -fx-border-insets: null;
    -fx-border-radius: null;
    -fx-border-style: null;
    -fx-border-width: 0;
    -fx-border-image-source: null;
    -fx-border-image-insets: 0 0 0 0;
    -fx-border-image-repeat: repeat;
    -fx-border-image-slice: 100%;
    -fx-border-image-width: 1 1 1 1;
    -fx-effect: none;
}

FormulaInputForm .formulaFont {
    -fx-font: 60px sans-serif;
}

FormulaInputForm > Label {
    -fx-font-size: 125%;
}

SceneNodeSlider.slider {
    -fx-background-color: blue;
    -fx-padding: 14px;
}

SceneNodeSlider.slider:vertical .track {
    -fx-background-color: red;
    -fx-background-insets: 0 0 0 0;
    -fx-padding: 0px 20px 0px 0px;
}

SceneNodeSlider.slider .thumb, SceneNodeSlider.slider:focused .thumb {
    -fx-background-color: green;
    -fx-background-insets: 0 0 0 0;
    -fx-background-radius: 14px;
    -fx-padding: 14px;
    -fx-effect: none;
}

SceneNodeSliderWithNameAndValue > Label {
    -fx-alignment: center;
    -fx-text-alignment: center;
}

LanguageSelector.choice-box {
    -fx-opacity: 0%;
    -fx-font-size: 30px;
}

TabPanel > Label {
    -fx-alignment: center;
    -fx-text-alignment: center;
}


GalleryIcon.galleryIcon, GalleryIcon.galleryIcon:selected, GalleryIcon.galleryItemIcon, GalleryIcon.galleryItemIcon:selected {
    -fx-background-color: transparent;
    -fx-background-insets: 0px;
    -fx-background-radius: 0 0 0 0;
    -fx-background-image: null;
    -fx-background-position: 0% 0%;
    -fx-background-repeat: repeat repeat;
    -fx-background-image-slice: 100%;
    -fx-background-size: auto auto;
}

GalleryIcon.galleryIcon {
    -fx-content-display: left;
    -fx-alignment: center-left;
    -fx-max-width: 10000000000000;
    -fx-max-height: 10000000000000;
    -fx-graphic-text-gap: 20px;
    -fx-wrap-text: true;
}

GalleryIcon.galleryIcon * {
    -fx-font-size: 20px;
}

GalleryIcon.galleryIcon:selected, GalleryIcon.galleryItemIcon:selected  {
    -fx-font-weight: bold;
}

GalleryIcon.galleryItemIcon {
    -fx-alignment: center;
    -fx-content-display: top;
    -fx-min-width: 224px;
    -fx-max-width: 224px;
    -fx-min-height: 204px;
    -fx-max-height: 204px;
    -fx-graphic-text-gap: 14px;
    -fx-padding: 0px;
}

TilePane.galleryIconContainer {
    -fx-hgap: 0px;
    -fx-vgap: 0px;
    -fx-background-color: #FFFFFF;
    -fx-alignment: center;
}

